--- a/advanced/configuration.mdx
+++ b/advanced/configuration.mdx
@@ -1,176 +1,321 @@
 ---
-title: Configuration
-description: "Advanced configuration options for Transfer Learning"
+title: 'Advanced Configuration'
+description: 'Configure Transfer Learning for your specific needs'
 ---
 
 # Advanced Configuration
 
-Transfer Learning provides a flexible configuration system that allows you to customize various aspects of the application. This page covers advanced configuration options and techniques.
-
-## Configuration Files
-
-Transfer Learning uses the following configuration files:
-
-1. `.env`: Main configuration file for environment variables
-2. `.env.local`: Local overrides (not committed to version control)
-3. `pyproject.toml`: Project configuration and dependencies
-
-## Environment Variables
-
-The main configuration is managed through environment variables, which can be set in the `.env` file or directly in your shell environment.
-
-### Core Settings
-
-| Variable | Description | Default |
-| -------- | ----------- | ------- |
-| `OPENAI_API_KEY` | OpenAI API key for vision and guide generation | - |
-| `BATCH_SIZE` | Number of frames to process in each batch | 10 |
-| `MAX_CONCURRENT_BATCHES` | Maximum number of concurrent batches | 4 |
-| `FRAME_INTERVAL` | Default interval between frame extractions in seconds | 30 |
-| `DEFAULT_MODEL` | Default OpenAI model for guide generation | gpt-4-vision-preview |
-| `DEFAULT_WHISPER_MODEL` | Default Whisper model for transcription | base |
-
-### Directory Settings
-
-| Variable | Description | Default |
-| -------- | ----------- | ------- |
-| `DATA_DIR` | Directory for processed video data | data/ |
-| `GUIDES_DIR` | Directory for generated guides | guides/ |
-| `TRANSCRIPTS_DIR` | Directory for transcripts | transcripts/ |
-| `VIDEOS_DIR` | Directory for downloaded videos | videos/ |
-| `ANALYSIS_DIR` | Directory for analysis results | analysis/ |
-| `TEMP_DIR` | Directory for temporary files | .cache/temp/ |
-| `CACHE_DIR` | Directory for cached results | .cache/ |
-| `LOGS_DIR` | Directory for log files | logs/ |
-
-### Advanced Settings
-
-| Variable | Description | Default |
-| -------- | ----------- | ------- |
-| `LOG_LEVEL` | Logging level (DEBUG, INFO, WARNING, ERROR) | INFO |
-| `ENABLE_METRICS` | Enable metrics collection | True |
-| `METRICS_DIR` | Directory for metrics data | metrics/ |
-| `CACHE_TTL` | Cache time-to-live in seconds | 86400 (1 day) |
-| `MAX_RETRIES` | Maximum number of retries for API calls | 3 |
-| `TIMEOUT` | Timeout for API calls in seconds | 60 |
-| `USER_AGENT` | User agent for HTTP requests | Transfer Learning/1.0 |
+Transfer Learning provides extensive configuration options to customize its behavior for your specific needs. This guide covers all available configuration options and how to use them.
 
 ## Configuration Methods
 
 There are several ways to configure Transfer Learning:
 
-### 1. Environment Variables
+<CardGroup cols={2}>
+  <Card title="Environment Variables" icon="gear" color="#4f46e5">
+    Set environment variables directly in your shell or in a `.env` file
+  </Card>
+  <Card title="CLI Options" icon="terminal" color="#0ea5e9">
+    Pass options directly to CLI commands
+  </Card>
+  <Card title="Config Command" icon="sliders" color="#10b981">
+    Use the `config` command to view and modify settings
+  </Card>
+  <Card title="Configuration Files" icon="file" color="#f59e0b">
+    Create custom configuration files for different projects
+  </Card>
+</CardGroup>
 
-Set environment variables directly in your shell:
+## Environment Variables
+
+The most common way to configure Transfer Learning is through environment variables. These can be set in your shell or in a `.env` file in the project root directory.
+
+### Core Settings
+
+<ResponseField name="OPENAI_API_KEY" type="string" required>
+  Your OpenAI API key for accessing GPT-4 Vision models.
+</ResponseField>
+
+<ResponseField name="ANTHROPIC_API_KEY" type="string" optional>
+  Your Anthropic API key for Claude models (optional).
+</ResponseField>
+
+<ResponseField name="HUGGINGFACE_API_KEY" type="string" optional>
+  Your Hugging Face API key for accessing models (optional).
+</ResponseField>
+
+### Processing Settings
+
+<ResponseField name="FRAME_EXTRACTION_INTERVAL" type="integer" default="30">
+  Interval between frame extractions (in frames).
+</ResponseField>
+
+<ResponseField name="MAX_FRAMES_PER_VIDEO" type="integer" default="100">
+  Maximum number of frames to extract per video.
+</ResponseField>
+
+<ResponseField name="BATCH_SIZE" type="integer" default="30">
+  Number of frames to process in each batch.
+</ResponseField>
+
+<ResponseField name="MAX_CONCURRENT_BATCHES" type="integer" default="100">
+  Maximum number of concurrent batches to process.
+</ResponseField>
+
+<ResponseField name="SUPPORTED_VIDEO_FORMATS" type="string" default=".mp4,.avi,.mov,.mkv">
+  Comma-separated list of supported video formats.
+</ResponseField>
+
+<ResponseField name="MAX_VIDEO_SIZE_MB" type="integer" default="500">
+  Maximum video size in megabytes.
+</ResponseField>
+
+### Model Settings
+
+<ResponseField name="OPENAI_MODEL" type="string" default="gpt-4o-mini">
+  OpenAI model to use for guide generation.
+</ResponseField>
+
+<ResponseField name="VISION_MODEL" type="string" default="o3-mini">
+  Vision model to use for image analysis.
+</ResponseField>
+
+<ResponseField name="FAST_MODEL" type="string" default="gpt-4o-mini">
+  Faster model to use for simpler tasks.
+</ResponseField>
+
+<ResponseField name="WHISPER_MODEL" type="string" default="base">
+  Whisper model to use for transcription (tiny, base, small, medium, large).
+</ResponseField>
+
+<ResponseField name="WHISPER_DEVICE" type="string" default="cpu">
+  Device to use for Whisper transcription (cpu, cuda).
+</ResponseField>
+
+<ResponseField name="WHISPER_COMPUTE_TYPE" type="string" default="int8">
+  Compute type for Whisper models (float16, int8).
+</ResponseField>
+
+### Cache Settings
+
+<ResponseField name="ENABLE_CACHE" type="boolean" default="true">
+  Enable or disable caching.
+</ResponseField>
+
+<ResponseField name="CACHE_TTL_HOURS" type="integer" default="24">
+  Time-to-live for cache entries in hours.
+</ResponseField>
+
+### Monitoring Settings
+
+<ResponseField name="ENABLE_MONITORING" type="boolean" default="true">
+  Enable or disable monitoring and metrics collection.
+</ResponseField>
+
+<ResponseField name="LOG_LEVEL" type="string" default="INFO">
+  Logging level (DEBUG, INFO, WARNING, ERROR).
+</ResponseField>
+
+<ResponseField name="METRICS_ENABLED" type="boolean" default="true">
+  Enable or disable metrics collection.
+</ResponseField>
+
+## Using the Config Command
+
+The `config` command allows you to view and modify configuration settings:
 
 ```bash
-export OPENAI_API_KEY=your-api-key-here
-export BATCH_SIZE=20
+# Show current configuration
+transfer-learning config --show
+
+# Reset configuration to defaults
+transfer-learning config --reset
 ```
 
-### 2. .env File
+## Creating a Custom Configuration File
 
-Create or edit the `.env` file in the project root:
+You can create a custom `.env` file for different projects:
 
-```
+```bash
+# Create a custom configuration file
+cat > my-project.env << EOF
 OPENAI_API_KEY=your-api-key-here
+FRAME_EXTRACTION_INTERVAL=60
+MAX_FRAMES_PER_VIDEO=50
 BATCH_SIZE=20
-MAX_CONCURRENT_BATCHES=8
+WHISPER_MODEL=small
+EOF
+
+# Use the custom configuration file
+export DOTENV_PATH=my-project.env
+transfer-learning process-video path/to/video.mp4
 ```
 
-### 3. Config Command
+## Directory Configuration
 
-Use the `config` command to interactively configure the application:
+Transfer Learning uses several directories for storing data, logs, and metrics. You can customize these directories:
+
+<ResponseField name="DATA_DIR" type="string" default="./data">
+  Base directory for all data storage.
+</ResponseField>
+
+<ResponseField name="CACHE_DIR" type="string" default="./.cache">
+  Directory for cache storage.
+</ResponseField>
+
+<ResponseField name="LOGS_DIR" type="string" default="./logs">
+  Directory for log files.
+</ResponseField>
+
+<ResponseField name="VIDEOS_DIR" type="string" default="./data/videos">
+  Directory for downloaded videos.
+</ResponseField>
+
+<ResponseField name="FRAMES_DIR" type="string" default="./data/frames">
+  Directory for extracted frames.
+</ResponseField>
+
+<ResponseField name="TRANSCRIPTS_DIR" type="string" default="./data/transcripts">
+  Directory for transcripts.
+</ResponseField>
+
+<ResponseField name="GUIDES_DIR" type="string" default="./data/guides">
+  Directory for generated guides.
+</ResponseField>
+
+<ResponseField name="ANALYSIS_DIR" type="string" default="./data/analysis">
+  Directory for analysis results.
+</ResponseField>
+
+<ResponseField name="TEMP_DIR" type="string" default="./data/temp">
+  Directory for temporary files.
+</ResponseField>
+
+## Configuration Examples
+
+<AccordionGroup>
+  <Accordion title="High-Quality Processing">
+    For high-quality processing with detailed guides:
+    
+    ```bash
+    # .env file
+    OPENAI_API_KEY=your-api-key-here
+    OPENAI_MODEL=gpt-4o
+    VISION_MODEL=gpt-4-vision-preview
+    FRAME_EXTRACTION_INTERVAL=15
+    MAX_FRAMES_PER_VIDEO=200
+    WHISPER_MODEL=medium
+    ```
+  </Accordion>
+  
+  <Accordion title="Fast Processing">
+    For faster processing with lower resource usage:
+    
+    ```bash
+    # .env file
+    OPENAI_API_KEY=your-api-key-here
+    OPENAI_MODEL=gpt-4o-mini
+    VISION_MODEL=o3-mini
+    FRAME_EXTRACTION_INTERVAL=60
+    MAX_FRAMES_PER_VIDEO=50
+    BATCH_SIZE=10
+    MAX_CONCURRENT_BATCHES=5
+    WHISPER_MODEL=tiny
+    ```
+  </Accordion>
+  
+  <Accordion title="GPU Acceleration">
+    For GPU-accelerated processing:
+    
+    ```bash
+    # .env file
+    OPENAI_API_KEY=your-api-key-here
+    WHISPER_MODEL=medium
+    WHISPER_DEVICE=cuda
+    WHISPER_COMPUTE_TYPE=float16
+    ```
+  </Accordion>
+  
+  <Accordion title="Detailed Logging">
+    For detailed logging and debugging:
+    
+    ```bash
+    # .env file
+    LOG_LEVEL=DEBUG
+    ENABLE_MONITORING=true
+    METRICS_ENABLED=true
+    ```
+  </Accordion>
+</AccordionGroup>
+
+## Command-Line Options
+
+Most configuration options can also be passed directly to CLI commands:
 
 ```bash
-transfer-learning config
-```
+# Override batch size and model for a specific command
+transfer-learning process-video path/to/video.mp4 --batch-size 15 --max-concurrent 10
 
-### 4. Command-Line Options
-
-Override configuration for a specific command:
-
-```bash
-transfer-learning process-video video.mp4 --batch-size 20 --max-concurrent 8
+# Use a specific model for guide generation
+transfer-learning generate-guide data/videos/video_name --model gpt-4o --temperature 0.3
 ```
 
 ## Configuration Precedence
 
-Configuration values are loaded in the following order (later sources override earlier ones):
+Configuration options are applied in the following order of precedence (highest to lowest):
 
-1. Default values in code
-2. `.env` file
-3. `.env.local` file
-4. Environment variables
-5. Command-line options
+1. Command-line options
+2. Environment variables
+3. `.env` file
+4. Default values
 
-## Advanced Configuration Techniques
+This means that command-line options will override environment variables, which will override values in the `.env` file, which will override default values.
 
-### Using Different Configurations
+## Validating Configuration
 
-You can maintain multiple configuration files for different use cases:
-
-```bash
-# Use a specific configuration file
-env $(cat .env.high-quality) transfer-learning process-video video.mp4
-```
-
-### Configuration Profiles
-
-Create configuration profiles for different scenarios:
-
-```
-# .env.high-quality
-BATCH_SIZE=5
-MAX_CONCURRENT_BATCHES=2
-FRAME_INTERVAL=10
-DEFAULT_MODEL=gpt-4-vision-preview
-
-# .env.fast
-BATCH_SIZE=20
-MAX_CONCURRENT_BATCHES=8
-FRAME_INTERVAL=60
-DEFAULT_MODEL=gpt-3.5-turbo
-```
-
-### Programmatic Configuration
-
-When using Transfer Learning as a library, you can configure it programmatically:
-
-```python
-from transfer_learning.config import settings
-
-# Override settings
-settings.batch_size = 20
-settings.max_concurrent_batches = 8
-
-# Use the library
-from transfer_learning.core.video_processor import process_videos_async
-await process_videos_async("video.mp4")
-```
-
-## Configuration Validation
-
-Transfer Learning validates configuration values to ensure they are within acceptable ranges. If a configuration value is invalid, a warning will be logged, and a default value will be used.
-
-You can manually validate the configuration using the `config` command:
+You can validate your configuration using the `config` command:
 
 ```bash
-transfer-learning config --show
+transfer-learning config --validate
 ```
 
-## Resetting Configuration
+This will check that all required configuration options are set and that values are within acceptable ranges.
 
-To reset the configuration to default values:
+## Troubleshooting
 
-```bash
-transfer-learning config --reset
-```
+<Accordion title="Missing API Key">
+  If you encounter errors about a missing API key:
+  
+  1. Check that your API key is correctly set in the `.env` file
+  2. Verify that the `.env` file is in the correct location
+  3. Try setting the API key as an environment variable:
+  
+  ```bash
+  export OPENAI_API_KEY=your-api-key-here
+  ```
+</Accordion>
 
-This will create a new `.env` file with default values, backing up the existing file if necessary.
+<Accordion title="Directory Permissions">
+  If you encounter errors about directory permissions:
+  
+  1. Check that the user running Transfer Learning has write permissions to the data directories
+  2. Try setting custom directory paths in locations where you have write permissions:
+  
+  ```bash
+  export DATA_DIR=/path/with/write/permissions
+  ```
+</Accordion>
 
-## Related Documentation
-
-- [CLI Overview](/cli/overview)
-- [Monitoring](/advanced/monitoring)
-- [Optimization](/advanced/optimization) 
+<Accordion title="Memory Issues">
+  If you encounter memory issues during processing:
+  
+  1. Reduce the batch size with `--batch-size`
+  2. Reduce the maximum concurrent batches with `--max-concurrent`
+  3. Increase the frame extraction interval to process fewer frames
+  
+  ```bash
+  export FRAME_EXTRACTION_INTERVAL=60
+  export BATCH_SIZE=10
+  export MAX_CONCURRENT_BATCHES=5
+  ```
+</Accordion> 
