Fix repository name in documentation files

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -12,8 +12,8 @@ This guide will help you get started with Transfer Learning, a powerful CLI tool
 <Steps>
   <Step title="Clone the Repository">
     ```bash
-    git clone https://github.com/Wearer-Lab/Transfert-Learning.git
-    cd Transfert-Learning
+    git clone https://github.com/Wearer-Lab/transfer-learning.git
+    cd transfer-learning
     ```
   </Step>
   <Step title="Set Up Virtual Environment">
