--- a/development.mdx
+++ b/development.mdx
@@ -49,8 +49,8 @@ transfer-learning/
 <Steps>
   <Step title="Clone the Repository">
     ```bash
-    git clone https://github.com/Wearer-Lab/Transfert-Learning.git
-    cd Transfert-Learning
+    git clone https://github.com/Wearer-Lab/transfer-learning.git
+    cd transfer-learning
     ```
   </Step>
   <Step title="Set Up Virtual Environment">
